<resources>
    <string name="app_name">QUIZ_APP</string>
    <string name="name_log" translatable="false">entre votre nom</string>
    <string name="password_log" translatable="false">entre votre motpass</string>
    <string name="login_btn" translatable="false">Connect</string>
    <string name="next_btn" translatable="false">Next</string>
    <string name="back_btn" translatable="false">back</string>

    <string name="start_quiz_btn" translatable="false">Start Quiz</string>
    <string name="text_quiz_btn" translatable="false">Choose the right answers, you’re ready!</string>

    <string name="forgot_password" translatable="false">you forgot your password ?!!</string>
    <string name="password_signup" translatable="false">entre votre motpass</string>
    <string name="password_signup_confirmation" translatable="false">entre votre motpass confirmer</string>

    <string name="algeria" translatable="false">Is it Algeria</string>
    <string name="Tunisia" translatable="false">Is it Tunisia</string>
    <string name="Morocco" translatable="false">Is it Morocco</string>
    <string name="Frensh" translatable="false">Is it Frensh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="frg_pass" translatable="false">Forgot Password?</string>
    <string name="email" translatable="false">Enter your email or username</string>
    <string name="send_res_link" translatable="false">Send Reset Link</string>
    <string name="opt3" translatable="false">Horse</string>
    <string name="opt4" translatable="false">Cow</string>
    <string name="op1" translatable="false">Cat</string>
    <string name="opt2" translatable="false">Dog</string>
    <string name="next" translatable="false">Next</string>
    <string name="sec_time" translatable="false">20s</string>
    <string name="quest_nbr" translatable="false">Question 1/10</string>
    <string name="quest" translatable="false">What does \'chien\' mean in English?</string>

</resources>