<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/btn_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:hint="@string/next_btn"
        app:layout_constraintTop_toBottomOf="@+id/check_Box_3"
        tools:layout_editor_absoluteX="161dp" />

    <CheckBox
        android:id="@+id/check_Box_1"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginTop="92dp"
        android:hint="@string/algeria"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="46dp" />

    <CheckBox
        android:id="@+id/check_Box_2"
        android:layout_width="332dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:hint="@string/Morocco"
        app:layout_constraintTop_toBottomOf="@+id/check_Box_1"
        tools:layout_editor_absoluteX="43dp" />

    <CheckBox
        android:id="@+id/check_Box_3"
        android:layout_width="325dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:hint="@string/Tunisia"
        app:layout_constraintTop_toBottomOf="@+id/check_Box_2"
        tools:layout_editor_absoluteX="47dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="58dp"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>